fixing bug where if the first glyph in a string is found but ones later in the string aren't we didn't draw the later ones.  patch from Masayuki Nakano <masayuki@d-toybox.com>. bug 328940. r=me